Changed username to email in front- and backend, changed text color and added getAllEmployee endpoint

--- a/frontend/TimeRegistrationFE/src/components/AddEmployeeForm/NewEmployeeForm.css
+++ b/frontend/TimeRegistrationFE/src/components/AddEmployeeForm/NewEmployeeForm.css
@@ -18,5 +18,13 @@
 
 .input-box input::placeholder{
     font-size: 100%;
-    color: white;
+    color: #ffa422;
+}
+
+h1 {
+    color: #ffa422;
+}
+
+button {
+    color: #ffa422;
 }
